implement latest review feedback