@@ -13,8 +13,8 @@
 package org.openhab.automation.pythonscripting.internal.scope;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -53,7 +53,7 @@ public abstract class AbstractScriptExtensionProvider implements ScriptExtension
 
     @Override
     public Collection<String> getDefaultPresets() {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
@@ -86,7 +86,7 @@ public abstract class AbstractScriptExtensionProvider implements ScriptExtension
             return results;
         }
 
-        return Collections.emptyMap();
+        return Map.of();
     }
 
     @Override
